--- a/gb/20/1/26/n11822159.md
+++ b/gb/20/1/26/n11822159.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/jtswrk284/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/jtswrk284/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/jtswrk284/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jtswrk284/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jtswrk284/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵演员舞姿矫健 舞蹈老师赞誉一流舞蹈家</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/200125233729100088-600x400.jpg" />
 <h6>1月25日晚，舞蹈老师Jana Bilag（右）和友人Crag Davis在底特律歌剧院观看神韵演出。（林朴／大纪元）
 </h6>
 <hr>
 	<p>【大纪元2020年01月26日讯】（大纪元记者林朴美国底特律报导）Jana Bilag是一位舞蹈老师，有自己的舞蹈教学室。</p>
-<p>1月25日晚，Bilag和朋友Crag Davis一起到<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E5%BA%95%E7%89%B9%E5%BE%8B%E6%AD%8C%E5%89%A7%E9%99%A2.md">底特律歌剧院</a>观看<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>世界艺术团的第九场演出。Bilag说：“演出非常美，舞蹈非常棒。”</p>
-<p>她表示，她教踢踏舞，<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>票是Davis送给她的圣诞礼物。这是她第一次看神韵。她说：“他们都是一流的舞蹈艺术家，他们的舞姿矫健、灵活，他们的跳跃翻腾很漂亮。技艺绝对高超。”</p>
+<p>1月25日晚，Bilag和朋友Crag Davis一起到<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%BA%95%E7%89%B9%E5%BE%8B%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">底特律歌剧院</a>观看<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团的第九场演出。Bilag说：“演出非常美，舞蹈非常棒。”</p>
+<p>她表示，她教踢踏舞，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>票是Davis送给她的圣诞礼物。这是她第一次看神韵。她说：“他们都是一流的舞蹈艺术家，他们的舞姿矫健、灵活，他们的跳跃翻腾很漂亮。技艺绝对高超。”</p>
 <p>Bilag表示，神韵演出的节目内容也幽默风趣，极具娱乐性。她很喜欢“小和尚”舞剧，觉得非常有趣。<br />
-她认为，神韵艺术团复兴传统的努力非常好，令人敬佩。她也喜欢演出中的<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md">神性</a>内容：“特别是最后一个节目‘法正三界’，<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md">创世主</a>从天而降，天女下凡，场景非常壮观，非常好，我非常喜欢。”</p>
-<p>她说：“最后一个节目发出的信息，即人类遇到劫难时<a href="https://github.com/jtswrk284/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md">创世主</a>会下世拯救世人，非常重要，我非常喜欢。这个信息对社区、国家或整个世界都重要。”</p>
+她认为，神韵艺术团复兴传统的努力非常好，令人敬佩。她也喜欢演出中的<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E6%80%A7.md#1">神性</a>内容：“特别是最后一个节目‘法正三界’，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>从天而降，天女下凡，场景非常壮观，非常好，我非常喜欢。”</p>
+<p>她说：“最后一个节目发出的信息，即人类遇到劫难时<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>会下世拯救世人，非常重要，我非常喜欢。这个信息对社区、国家或整个世界都重要。”</p>
 <p>她表示，她一直鼓励她的学生看神韵演出。Bilag说：“今晚看神韵是一次美妙的体验，非常美，非常有意思。”</p>
 <p>Davis是一位工程师，在一家德国公司从事汽车测试工作。他表示，神韵演出非常美，“天幕光彩夺目，音乐悦耳动听，特别是后半场的节目音乐具有很强的能量。”</p>
 <p>Davis说：“演出色彩太美了。令人振奋，而且舞台表演水平也非常高。”</p>
@@ -21,41 +21,49 @@
 	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/1/26/n11822159.htm">神韵演员舞姿矫健 舞蹈老师赞誉一流舞蹈家</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817972.htm">李靖宇：武汉肺炎失控！ “关心政治”或可救命</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817849.htm">武汉肺炎失控！ “关心政治”或可救命</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817152.htm">香港政府公布武汉肺炎最新措施</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816943.htm">亚省拉响应对武汉肺炎警报</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816650.htm">组图：武汉肺炎爆发 各国严阵以待</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816092.htm">【十字路口】武汉肺炎3大风险恐加速疫情蔓延</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11814650.htm">武汉肺炎消毒懒人包！这样洗手才有效</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/22/n11814152.htm">一文看懂 中美应对武汉肺炎疫情有何不同</a></li>
-> <li><a href="https://github.com/jtswrk284/djy/blob/master/gb/20/1/25/n11821240.md">美3个州新增3例疑似“武汉肺炎”病例</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】全国确诊肺炎2067例56死 京沪等停省运</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821017.htm">大陆开启封路模式 封城封路封村封户</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11821057.htm">专家：武汉肺炎源头或来自中共病毒实验室</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11821688.htm">【视频】疫情紧急 武汉小伙向国际求助</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/20/n11807585.htm">2020庚子年国运命理探讨与前瞻</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801163.htm">除旧布新 怎样贴春联春贴不犯禁忌？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/7/2/12/n1621075.htm">丢勒兄弟的手</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/5/n11768578.htm">苏东坡书迹第一《寒食帖》荡过人生低谷的净与美</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818530.htm">武汉医院告急 向外求援 医护哭诉：顶不住了</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818378.htm">“武汉肺炎”出现另一种新型病毒</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11817620.htm">法国游客逃离武汉：前脚上飞机 军队已赶到</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/26/n11823054.htm">【拍案惊奇】武汉肺炎康复者 是怎么治好的？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819535.htm">【拍案惊奇】除夕夜盼除疫 武汉危机是人祸</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/18/n11801884.htm">【罗厨寻味】年菜系列之四：荷叶龙虾糯米蒸鸡</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816400.htm">章子怡在美坐月子 发片鼓励国人抗击武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/23/n11816941.htm">汤唯拍戏曾患肺炎 自责带女儿在身边同时感染</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11818809.htm">陆剧《急诊科医生》 3年前演绎“武汉肺炎”</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/25/n11819909.htm">子瑜体恤医护人员辛劳 盼新年大家平安健康</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/24/n11819130.htm">港星林利抗癌成功 除夕夜发文：癌指数跑光光</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/6/7/n11307364.md#1">摩顿“大舌头”开张 市长剪彩</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/9/20/n11536030.md#1">新建戒毒中心 摩顿市长提案惹议</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/9/27/n11551236.md#1">摩顿市长大选 柯廷森与麦福森首次辩论</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/10/18/n11597691.md#1">回应批评 摩顿市长解释新戒毒所</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11819921.md#1">神韵演出“绝对美丽” 会计师赞赏太神奇</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11820178.md#1">神韵演员舞蹈技巧高超 公司老板陶醉其中</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11820215.md#1">神韵传递信息 公司CEO看见光明与希望</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11820231.md#1">舞蹈精准美丽 公司老板赞叹神韵团队精神</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11820277.md#1">公司经理：只有亲身体会才能发现神韵之美</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/20/1/25/n11820288.md#1">神韵揭中共迫害人权 律师夫妇推崇赞赏</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/jtswrk284/djy/blob/master/gb/20/1/26/n11822159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jtswrk284/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jtswrk284/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jtswrk284/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/2/n13690909.md#1">【马克时空】上百俄机被乌击落 战机如何发现导弹来袭?</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/26/n11822159.htm">神韵演员舞姿矫健 舞蹈老师赞誉一流舞蹈家</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/20/1/26/n11822159.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
